fixed index page flex-center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,16 @@ footer.page-footer {
     text-align:center;
 }
 
+.flex-center-index {
+    color: #000; /*color of text on top modal */
+    font-family: 'OpenSans-Regular', helvetica;
+    font-size: 30px;
+    letter-spacing: 3px;
+    position:relative;
+    top:50px;
+    text-align:center;
+}
+
 /* Small devices */
 @media (max-width: 768px) {
     .flex-center {
